-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.2
-
Ubuntu 16.04
-
9b1b87b6eb5fdf2f98e9e380d25d71bce93e7e27 9b1b87b6eb5fdf2f98e9e380d25d71bce93e7e27
Looks like MouseArea does not release the pressed state from first MouseArea that is pressed until double clicking it.
| For Gerrit Dashboard: QTBUG-64249 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 213098,6 | grabMouse() and QQWPriv::removeGrabber(): be clear whether mouse or touch | 5.9 | qt/qtdeclarative | Status: MERGED | -2 | 0 |
| 215289,1 | grabMouse() and QQWPriv::removeGrabber(): be clear whether mouse or touch | 5.10 | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |